# zenforge

./: .gitignore  README.md  app.py  appraisal.html  get_llm.py  main.py  project_bottleneck_analysis.py  pyproject.toml  sample_data.json  sdlc_timeline.py  static_test_data.py  streamlit_app.py  test.py~  utils.py  zenforge.pth  zenforge_dashboard.py
agents/: sdlc_timeseries.py
config/: github_repos.json
demo/: ic_productivity_dashboard.py  productivity_dashboard.py  sdlc_timeline.py
demo/first_line_manager/: dashboard.py  mgr_performance_metrics_dashboard.py  mgr_productivity_dashboard.py
demo/ic/: dashboard.py  ic_performance_and_careeer_dashboard.py  ic_performance_and_career_dashboard.py  ic_performance_dashboard.py  ic_productivity_dashboard.py
demo/metrics/: development_cycle_metrics.py  engineering_metrics.py  (+2 more)
first_line_manager/: dashboard.py  mgr_performance_metrics_dashboard.py  mgr_productivity_dashboard.py
functions/: development_cycle_metrics.py  ingestion.py  langchain_appraisal.py  llamaindex_appraisal.py  llamaindex_summarization.py  prompts.py  sdlc_timeline.py  self_appraisal.py  weekly_report.py
helpers/: confluence.py  constants.py  get_llm.py  github.py  github_client.py  import_env.py  ingestion.py  jira.py
ic/: dashboard.py  ic_learning_dashboard.py  ic_performance_and_careeer_dashboard.py  ic_productivity_dashboard.py
model/: events_analytics.py  events_crud.py  events_data_generation_core.py  events_data_generator.py  events_entity_generators.py  events_schema.py  load_events_db.py  load_timescaledb.py  modified_json.json  pydantic_models.py  response_json.json  sample_users.py  sdlc-sample-data.py  sdlc_events.py  sdlc_sample_data.xlsx  timeline_enforcer.py  timeline_validators.py  timescaledb_init.py  validators.py  zenforge_data.json
second_line_manager_or_director/: dashboard.py  org_performance_dashboard.py  org_productivity_dashboard.py  org_project_and_portfolio_dashboard.py
tools/: auth.py  fetch_commit_comments.py  fetch_commits.py  fetch_pr_comments.py  fetch_prs.py  generate_appraisal_docs.py  generate_docs.py  github.py  github_client.py  github_data_output.json  sdlc-python-impl.py  sdlc-schema-python.py  timescaledb-python-schema.py  timeseries_data.json  utils.py
ui/: components.py  dashboard.py  ic_productivity_dashboard.py  productivity_dashboard.py  self_appraisal_ui.py  style.py  title_bar.py  weekly_report_ui.py
(+46 files in other folders)
