[tool.poetry]
name = "zenforge"
version = "0.1.0"
description = ""
authors = ["Vijay Sankarasubramanian <vijayanands@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
matplotlib = "^3.9.2"
streamlit-echarts = "^0.4.0"
wordcloud = "^1.9.3"
numpy = "^2.1.2"
scipy = "^1.14.1"
sqlalchemy = "^2.0.36"
pymongo = "^4.10.1"
psycopg2-binary = "^2.9.10"
openpyxl = "^3.1.5"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
