[tool.poetry]
name = "talent-copilot-1"
version = "0.1.0"
description = ""
authors = ["Vijay Sankarasubramanian <vijayanands@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.32.3"
streamlit = "^1.37.0"
pysqlite3 = "^0.5.3"
python-dotenv = "^1.0.1"
llama-index = {extras = ["pinecone"], version = "^0.10.65"}
openai = "^1.37.1"
llama-cpp-python = "^0.2.85"
pdfkit = "^1.0.0"
pinecone-client = "^5.0.1"
pinecone = "^5.0.1"
bcrypt = "^4.2.0"
sqlalchemy = "^2.0.32"
llama-index-vector-stores-pinecone = "^0.1.9"
pandas = "^2.2.2"
plotly = "^5.23.0"
psycopg2 = "^2.9.10"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
